--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,11 @@ members = [
     "multithreading",
     "global-variable",
     "unsafe-rust",
+    "macro-programming",
+    "hello_macro",
+    "hello_macro/hello_macro_derive",
+    "route_macro",
+    "route_macro/route_macro_attribute",
+    "sql_macro"
 ]
 resolver = "2"
