--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ members = [
     "hello_macro/hello_macro_derive",
     "route_macro",
     "route_macro/route_macro_attribute",
-    "sql_macro"
+    "sql_macro",
+    "async-programming"
 ]
 resolver = "2"
