--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ members = [
     "route_macro",
     "route_macro/route_macro_attribute",
     "sql_macro",
-    "async-programming"
+    "async-programming",
+    "timer_future"
 ]
 resolver = "2"
